--- a/index.html
+++ b/index.html
@@ -7,22 +7,25 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="styles.css">
 </head>
-<header>
-    <div id="nav" class="navigation-bar">
-        <div class="nav-logo"></div>
-        <div id="menu">
-            <ul>
-                <li>Home</li>
-                <li>Menu</li>
-                <li>Products</li>
-                <li>Services</li>
-                <li>Blodgs</li>
-                <li>Shopping</li>
-            </ul>
-        </div>
-    </div>
-</header>
+
 <body>
+
+    <header>
+        <div class="navigation-bar">
+            <div class="nav-logo"></div>
+            <div class="menu">
+                <ul>
+                    <li>Home</li>
+                    <li>Menu</li>
+                    <li>Products</li>
+                    <li>Services</li>
+                    <li>Blodgs</li>
+                    <li>Shopping</li>
+                </ul>
+            </div>
+        </div>
+    </header>
+
 
     
 </body>
