--- a/index.html
+++ b/index.html
@@ -12,16 +12,19 @@
 
     <header>
         <div class="navigation-bar">
-            <div class="nav-logo"></div>
+            
             <div class="menu">
+                <div class="nav-logo"></div>
                 <ul>
-                    <li>Home</li>
+                    <li><a href="#"></a>Home</li>
                     <li>Menu</li>
                     <li>Products</li>
                     <li>Services</li>
                     <li>Blodgs</li>
                     <li>Shopping</li>
                 </ul>
+            <input type="text" placeholder="Search Here" name="search">
+            <botton type="submit"><i class="fa fa search"></i></botton>
             </div>
         </div>
     </header>
