--- a/index.html
+++ b/index.html
@@ -24,10 +24,33 @@
                     <li>Shopping</li>
                 </ul>
             <input type="text" placeholder="Search Here" name="search">
-            <botton type="submit"><i class="fa fa search"></i></botton>
+            <button class="button">search</button>
             </div>
         </div>
     </header>
+
+    <div class="today">today`s Special</div>
+    <div class="recommend"> Campions & Recommendations
+        <p>The speciality of this coffee is about<br>
+        fragnance. You will lost in the world of coffee</p>
+    </div>
+
+    <div class="facts">The amazing facts about the coffee.
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum esse voluptatibus nesciunt consectetur perferendis! Temporibus doloremque, vel inventore officia eius veniam deleniti quos quisquam nemo minus ullam amet porro. Quidem?
+        </p>
+    </div>
+    <div class="aside">Why is pal`s coffee
+        <ul>
+            <li>Services</li>
+            <li>Environment of the shop</li>
+            <li>taste</li>
+            <li>fragnance</li>
+            <li>health benifit`s</li>
+            <li>Quality</li>
+            
+        </ul>
+    </div>
+
 
 
     
