--- a/menu.html
+++ b/menu.html
@@ -17,8 +17,8 @@
             <div class="menu">
                 <div class="nav-logo"></div>
                 <ul>
-                    <li>Home</li>
-                    <li><a href="menu.html">Menu</a></li>
+                    <li><a href="index.html"></a>Home</li>
+                    <li></li>
                     <li><a href="Products.html"></a>Products</li>
                     <li><a href="Services.html"></a>Services</li>
                     <li><a href="blogs.html"></a>Blogs</li>
@@ -30,34 +30,6 @@
         </div>
     </header>
 
-    <div class="today">today`s Special</div>
-    <div class="recommend"> Campions & Recommendations
-        <p>The speciality of this coffee is about<br>
-        fragnance. You will lost in the world of coffee</p>
-    </div>
-
-    <div class="facts">The amazing facts about the coffee.
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum esse voluptatibus nesciunt consectetur perferendis! Temporibus doloremque, vel inventore officia eius veniam deleniti quos quisquam nemo minus ullam amet porro. Quidem?
-        </p>
-    </div>
-    <div class="aside">Why is pal`s coffee
-        <ul>
-            <li>Services</li>
-            <li>Environment of the shop</li>
-            <li>taste</li>
-            <li>fragnance</li>
-            <li>health benifit`s</li>
-            <li>Quality</li>
-            
-        </ul>
-    </div>
-    <div class="social-media">
-
-    </div>
-
-
-
-
-
+    
 </body>
 </html>
