--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
                 <ul>
                     <li>Home</li>
                     <li><a href="menu.html">Menu</a></li>
-                    <li><a href="Products.html"></a>Products</li>
-                    <li><a href="Services.html"></a>Services</li>
-                    <li><a href="blogs.html"></a>Blogs</li>
-                    <li><a href="Shopping.hmtl"></a>Shopping</li>
+                    <li><a href="Products.html">Products</a></li>
+                    <li><a href="Services.html">Services</a></li>
+                    <li><a href="blogs.html">Blogs</a></li>
+                    <li><a href="shopping.html">Shopping</a></li>
                 </ul>
             <input type="text" placeholder="Search Here" name="search">
             <button class="button">search</button>
