--- a/blogs.html
+++ b/blogs.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Coffee-Shop</title>
+    <title>Coffee-Shop-blog</title>
     <script type="text/javascript"src="script.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="styles.css">
@@ -17,12 +17,12 @@
             <div class="menu">
                 <div class="nav-logo"></div>
                 <ul>
-                    <li><a href="index.html"></a>Home</li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="menu.html">Menu</a></li>
-                    <li><a href="Products.html"></a>Products</li>
-                    <li><a href="Services.html"></a>Services</li>
+                    <li><a href="Products.html">Products</a></li>
+                    <li><a href="Services.html">Services</a></li>
                     <li>Blogs</li>
-                    <li><a href="Shopping.hmtl"></a>Shopping</li>
+                    <li><a href="shopping.html">Shopping</a></li>
                 </ul>
             <input type="text" placeholder="Search Here" name="search">
             <button class="button">search</button>
