--- a/menu.html
+++ b/menu.html
@@ -30,6 +30,9 @@
         </div>
     </header>
 
+    <div class="recommend">Here are the most famous set we <br>
+        recommend from pal`s coffee shop</div>
+
     
 </body>
 </html>
