--- a/index.html
+++ b/index.html
@@ -51,8 +51,17 @@
             
         </ul>
     </div>
-    <div class="social-media">
+    <div class="social-media-container">
 
+    </div>
+
+    <div class="footer">
+        <span>this is the span of the page</span>
+        <ul>
+            <li>sitemap</li>
+            <li>Contact Detais</li>
+            <li>Queries</li>
+        </ul>
     </div>
 
 
