fies added for the restart

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </div>
 
     <div class="footer">
-        <span>this is the span of the page</span>
+        <p>This is the footer belt</p>
         <ul>
             <li>sitemap</li>
             <li>Contact Detais</li>
