--- a/menu.html
+++ b/menu.html
@@ -30,7 +30,7 @@
         </div>
     </header>
 
-    <div class="recommend">Here are the most famous set we <br>
+    <div class="osusume">Here are the most famous set we <br>
         recommend from pal`s coffee shop</div>
 
     
