new files and css added in menu

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
+<body class="index">
 
     <header>
         <div class="navigation-bar">
             
-            <div class="menu">
+            <div class="sub-title">
                 <div class="nav-logo"></div>
                 <ul>
                     <li>Home</li>
