--- a/menu.html
+++ b/menu.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
+<body class="menu-list">
 
     <header>
         <div class="navigation-bar">
@@ -31,7 +31,31 @@
     </header>
 
     <div class="osusume">Here are the most famous set we <br>
-        recommend from pal`s coffee shop</div>
+        recommend from pal`s coffee shop
+    </div>
+
+    <div class="container">
+        <div class="item item-1">item-1</div>
+        <div class="item item-2">item-2</div>
+        <div class="item item-3">item-3</div>
+        <div class="item item-4">item-4</div>
+        <div class="item item-5">item-5</div>
+        <div class="item item-6">item-6</div>
+        <div class="item item-7">item-7</div>
+        <div class="item item-8">item-8</div>
+        <div class="item item-9">item-9</div>
+        <div class="item item-10">item-10</div>
+        <div class="item item-11">item-11</div>
+        <div class="item item-12">item-12</div>
+        <div class="item item-13">item-13</div>
+        <div class="item item-14">item-14</div>
+        <div class="item item-15">item-15</div>
+        <div class="item item-16">item-16</div>
+        <div class="item item-17">item-17</div>
+        <div class="item item-18">item-18</div>
+    </div>
+
+        
 
     
 </body>
